--- a/client-astro/src/lib/components/base/Footer.astro
+++ b/client-astro/src/lib/components/base/Footer.astro
@@ -1,12 +1,22 @@
+---
+import { GithubIcon } from "../icons"
+---
+
 <footer class="border-t border-t-neutral-400/50">
   <div class="max-w-7xl mx-auto px-6 py-12 space-y-4">
     <div class="inline-flex gap-x-4">
-      <a class="transition-opacity opacity-60 hover:opacity-100" href="/about">About</a>
-      <a class="transition-opacity opacity-60 hover:opacity-100" href="/api">API</a>
-      <a class="transition-opacity opacity-60 hover:opacity-100" href="/contact">Contact</a>
+      <a class="transition-opacity opacity-60 hover:opacity-100" href="/about"
+        >About</a
+      >
+      <a class="transition-opacity opacity-60 hover:opacity-100" href="/api"
+        >API</a
+      >
+      <a class="transition-opacity opacity-60 hover:opacity-100" href="/contact"
+        >Contact</a
+      >
     </div>
 
-    <p>
+    <p class="text-sm">
       Disclaimer: Flinky is an open-source community-curated website where the
       sole purpose is to collect and catalog anthro media worldwide. All
       character assets, logos, and trademarks are shown for informational
@@ -14,8 +24,17 @@
     </p>
 
     <div class="text-sm flex gap-x-4">
-      <span><span class="opacity-40">Created by </span><a href="https://kurojifusky.com">Kuro</a></span>
-      <span class="transition-opacity opacity-60 hover:opacity-100">Source code</span>
+      <span
+        ><span class="opacity-40">Created by </span><a
+          href="https://kurojifusky.com">Kuro</a
+        ></span
+      >
+      <span
+        class="transition-opacity opacity-60 hover:opacity-100 inline-flex items-center gap-x-1"
+      >
+        <GithubIcon />
+        <span>Source code</span>
+      </span>
       <span>COMMIT_HASH</span>
     </div>
   </div>
