--- a/client-astro/src/lib/components/base/Navbar.astro
+++ b/client-astro/src/lib/components/base/Navbar.astro
@@ -1,17 +1,44 @@
+---
+import { MenuIcon, ChevronDownIcon, Settings2Icon, SearchIcon } from "../icons";
+---
+
 <nav data-global-navigation="" class="sticky top-0 bg-inherit z-[100]">
   <div class="px-6 py-3.5 flex items-center gap-x-3">
+    <button class="px-2 py-2 rounded-md cursor-pointer">
+      <MenuIcon />
+    </button>
     <a href="/">Flinky</a>
-    <button>Browse</button>
-    <button>Suggest</button>
+    <button
+      class="px-3 py-1.5 border rounded-md cursor-pointer inline-flex items-center gap-x-1"
+    >
+      <span>Browse</span>
+      <ChevronDownIcon width="1em" height="1em" />
+    </button>
+
     <div class="relative flex-1">
+      <span
+        class="absolute left-3 inset-y-0 opacity-50 pointer-events-none flex items-center"
+      >
+        <SearchIcon width="1.2em" height="1.2em" />
+      </span>
       <input
         id="global-search"
-        class="w-full dark:bg-neutral-900 rounded-md"
+        class="pl-9 py-2 max-w-96 w-full dark:bg-neutral-900 rounded-md"
         role="searchbox"
         type="text"
-        placeholder="Search for something"
+        placeholder="Search"
       />
     </div>
-    <button>Site options / accessibility</button>
+    <div class="flex gap-x-1">
+      <button class="px-3 py-1.5 border rounded-md cursor-pointer"
+        >Request</button
+      >
+      <button
+        class="px-2 py-2 border rounded-md cursor-pointer"
+        aria-label="Site options and accessibility settings"
+      >
+        <Settings2Icon />
+      </button>
+    </div>
   </div>
 </nav>
