--- a/client-astro/src/lib/layouts/Layout.astro
+++ b/client-astro/src/lib/layouts/Layout.astro
@@ -22,7 +22,7 @@ const { title, description } = Astro.props
     {description && <meta name="description" content={description} />}
   </head>
   <body class:list={["font-[Inter] antialiased overflow-x-hidden not-[.select-auto]:select-none dark:text-white dark:bg-black scheme-light-dark", "text-sm lg:text-base"]}>
-    <a href="#main-content" class="absolute top-0 px-6 py-4 z-[101] opacity-0 focus:opacity-100 focus:pointer-events-auto">Skip to content?</a>
+    <a href="#main-content" class="bg-inherit border absolute top-0 px-6 py-4 z-[101] opacity-0 focus:opacity-100 pointer-events-none focus:pointer-events-auto">Skip to content?</a>
     <Navbar />
     <main id="main-content" class="py-6">
       <slot />
