--- a/client/src/lib/layouts/Layout.astro
+++ b/client/src/lib/layouts/Layout.astro
@@ -38,6 +38,7 @@ const { title, description } = Astro.props
     ]}
   >
     <a
+      data-astro-prefetch="false"
       href="#main-content"
       class="bg-inherit border absolute top-0 px-6 py-4 z-[101] opacity-0 focus:opacity-100 pointer-events-none focus:pointer-events-auto"
       >Skip to content?</a
