simplify footer; make text smaller

--- a/client/src/lib/layouts/Layout.astro
+++ b/client/src/lib/layouts/Layout.astro
@@ -34,7 +34,7 @@ const { title, description } = Astro.props
   <body
     class:list={[
       "font-[Inter] antialiased overflow-x-hidden not-[.select-auto]:select-none dark:text-white dark:bg-black scheme-light-dark",
-      "text-sm lg:text-base",
+      "text-sm",
     ]}
   >
     <a
