--- a/client/src/lib/components/base/Footer.astro
+++ b/client/src/lib/components/base/Footer.astro
@@ -1,41 +1,42 @@
 ---
-import { GithubIcon } from "../icons"
+import { ExtLinkIcon, GithubIcon } from "../icons";
+
+const footerLinks = [
+  { text: "About", href: "/about" },
+  { text: "Disclaimer", href: "/about#disclaimer" },
+  { text: "Guidelines", href: "/guidelines" },
+  { text: "Help", href: "/help" },
+  { text: "Statistics", href: "/stats" },
+  { text: "API", href: "/api" },
+];
 ---
 
-<footer class="border-t border-t-neutral-400/50">
-  <div class="max-w-7xl mx-auto px-6 py-12 space-y-4">
-    <div class="inline-flex gap-x-4">
-      <a class="transition-opacity opacity-60 hover:opacity-100" href="/about"
-        >About</a
-      >
-      <a class="transition-opacity opacity-60 hover:opacity-100" href="/api"
-        >API</a
-      >
-      <a class="transition-opacity opacity-60 hover:opacity-100" href="/contact"
-        >Contact</a
-      >
+<div class="border-t border-t-neutral-400/50">
+  <footer
+    class="max-w-7xl mx-auto px-6 py-10 space-y-6 prose-p:leading-relaxe prose-p:opacity-50"
+  >
+    <div class="flex gap-x-4">
+      <span class="opacity-80 shrink-0 mr-3.5">© 2025 Kuroji Fusky</span>
+      {
+        footerLinks.map((e) => (
+          <a
+            class="transition-opacity opacity-60 hover:opacity-100 hover:underline"
+            href={e.href}
+          >
+            {e.text}
+          </a>
+        ))
+      }
+      <div class="flex-1"></div>
+        <a
+          href="https://github.com/kuroji-fusky/flinky"
+          target="_blank"
+          class="transition-opacity opacity-60 hover:opacity-100 flex items-center gap-x-1 hover:underline"
+        >
+          <GithubIcon />
+          <span>Source code</span>
+          <ExtLinkIcon width="1em" />
+        </a>
     </div>
-
-    <p class="text-sm">
-      Disclaimer: Flinky is an open-source community-curated website where the
-      sole purpose is to collect and catalog anthro media worldwide. All
-      character assets, logos, and trademarks are shown for informational
-      purposes only.
-    </p>
-
-    <div class="text-sm flex gap-x-4">
-      <span
-        ><span class="opacity-40">Created by </span><a
-          href="https://kurojifusky.com">Kuro</a
-        ></span
-      >
-      <span
-        class="transition-opacity opacity-60 hover:opacity-100 inline-flex items-center gap-x-1"
-      >
-        <GithubIcon />
-        <span>Source code</span>
-      </span>
-      <span>COMMIT_HASH</span>
-    </div>
-  </div>
-</footer>
+  </footer>
+</div>
