--- a/client/src/lib/components/base/Navbar.astro
+++ b/client/src/lib/components/base/Navbar.astro
@@ -47,13 +47,13 @@ import { MenuIcon, ChevronDownIcon, Settings2Icon, SearchIcon } from "../icons"
 
     <div class="relative flex-1">
       <span
-        class="absolute left-3 inset-y-0 opacity-50 pointer-events-none flex items-center"
+        class="absolute left-2.5 inset-y-0 opacity-50 pointer-events-none flex items-center"
       >
         <SearchIcon width="1.2em" height="1.2em" />
       </span>
       <input
         id="global-search"
-        class="pl-9 py-1.5 lg:py-2 max-w-96 w-full dark:bg-neutral-900 rounded-md placeholder:text-sm lg:placeholder:text-base"
+        class="pl-8 py-1 max-w-60 w-full dark:bg-neutral-900/40 dark:border-neutral-600/60 rounded-md placeholder:text-sm"
         role="searchbox"
         type="text"
         placeholder="Search"
