--- a/client/src/lib/components/base/Navbar.astro
+++ b/client/src/lib/components/base/Navbar.astro
@@ -1,21 +1,21 @@
 ---
-import { MenuIcon, ChevronDownIcon, Settings2Icon, SearchIcon } from "../icons"
+import { MenuIcon, ChevronDownIcon, Settings2Icon, SearchIcon } from "../icons";
 ---
 
 <script>
   import { isBrowseMenuOpen } from "../../stores";
 
-  const browseBtn = document.getElementById("browse-btn") as HTMLButtonElement;
+  const browseBtn = document.getElementById("browse") as HTMLButtonElement;
 
-  const htmlRoot = document.documentElement
+  const htmlRoot = document.documentElement;
 
   isBrowseMenuOpen.subscribe(() => {
     browseBtn.ariaExpanded = isBrowseMenuOpen.value.toString();
 
     if (isBrowseMenuOpen.value) {
-      htmlRoot.classList.add("overflow-y-hidden")
+      htmlRoot.classList.add("overflow-y-hidden");
     } else {
-      htmlRoot.classList.remove("overflow-y-hidden")
+      htmlRoot.classList.remove("overflow-y-hidden");
     }
   });
 
@@ -31,21 +31,34 @@ import { MenuIcon, ChevronDownIcon, Settings2Icon, SearchIcon } from "../icons"
 </script>
 
 <nav data-global-navigation="" class="sticky top-0 bg-inherit z-[100]">
-  <div class="px-6 py-3.5 flex items-center gap-x-3">
+  <div class="px-6 py-3.5 flex items-center gap-x-4">
     <button class="px-2 py-2 rounded-md cursor-pointer block lg:hidden">
       <MenuIcon />
     </button>
-    <a href="/">Flinky</a>
-    <button
-      id="browse-btn"
-      aria-expanded="false"
-      class="px-3 py-1.5 hover:bg-blue-400/60 rounded-md cursor-pointer inline-flex items-center gap-x-1"
-    >
-      <span>Browse</span>
-      <ChevronDownIcon width="1em" height="1em" />
-    </button>
+    <a href="/" class="ml-0 lg:ml-2">Flinky</a>
+    <span class="h-4 border-l opacity-40"></span>
+    <div class="inline-flex gap-x-1">
+      <button
+        id="browse"
+        aria-expanded="false"
+        class=" px-2.5 py-1.5 hover:bg-blue-600/60 rounded-md cursor-pointer hidden lg:inline-flex items-center gap-x-1"
+      >
+        <span>Browse</span>
+        <ChevronDownIcon width="1em" height="1em" class="opacity-65" />
+      </button>
+      <button
+        id="search"
+        aria-expanded="false"
+        class="px-2.5 py-1.5 bg-blue-600/20 hover:bg-blue-600/60 rounded-md cursor-pointer inline-flex items-center gap-x-1"
+      >
+        <SearchIcon class="opacity-65" />
+        <span>Search</span>
+      </button>
+    </div>
 
-    <div class="relative flex-1">
+    <div class="flex-1"></div>
+
+    <!-- <div class="relative flex-1">
       <span
         class="absolute left-2.5 inset-y-0 opacity-50 pointer-events-none flex items-center"
       >
@@ -60,7 +73,7 @@ import { MenuIcon, ChevronDownIcon, Settings2Icon, SearchIcon } from "../icons"
         autocomplete="off"
         spellcheck="false"
       />
-    </div>
+    </div> -->
     <div class="flex gap-x-1">
       <a href="/requests" class="px-3 py-1.5 border rounded-md cursor-pointer"
         >Request</a
