--- a/client/src/pages/index.astro
+++ b/client/src/pages/index.astro
@@ -5,8 +5,8 @@ import SectionTitle from "../lib/layouts/SectionTitle.astro"
 ---
 
 <Layout title="Home">
+	<header class="h-[calc(100dvh-2rem)] bg-purple-600/10 -translate-y-6">hero stuff</header>
 	<div class="max-w-7xl mx-auto px-6 space-y-9">
-		<header class="h-[600px]">hero stuff</header>
 
 		<div class="grid grid-cols-1 lg:grid-cols-2 lg:gap-x-4">
 			<SectionTitle heading="Recently added">
