--- a/client/src/lib/components/base/Footer.astro
+++ b/client/src/lib/components/base/Footer.astro
@@ -15,7 +15,7 @@ const footerLinks = [
   <footer
     class="max-w-7xl mx-auto px-6 py-10 space-y-6 prose-p:leading-relaxe prose-p:opacity-50"
   >
-    <div class="flex gap-x-4">
+    <div class="flex gap-x-4 gap-y-5 flex-col lg:flex-row">
       <span class="opacity-80 shrink-0 mr-3.5">© 2025 Kuroji Fusky</span>
       {
         footerLinks.map((e) => (
@@ -27,7 +27,7 @@ const footerLinks = [
           </a>
         ))
       }
-      <div class="flex-1"></div>
+      <div class="flex-1 hidden lg:block"></div>
         <a
           href="https://github.com/kuroji-fusky/flinky"
           target="_blank"
