--- a/client/src/pages/index.astro
+++ b/client/src/pages/index.astro
@@ -4,7 +4,7 @@ import Layout from "../lib/layouts/Layout.astro"
 import SectionTitle from "../lib/layouts/SectionTitle.astro"
 ---
 
-<Layout title="Home">
+<Layout title="Home" description="A home of anthro things">
 	<header class="h-[calc(100dvh-2rem)] bg-purple-600/10 -translate-y-6">hero stuff</header>
 	<div class="max-w-7xl mx-auto px-6 space-y-9">
 
