--- a/client/src/lib/layouts/Layout.astro
+++ b/client/src/lib/layouts/Layout.astro
@@ -53,7 +53,7 @@ const { title, description } = Astro.props
       >Skip to content?</a
     >
     <Navbar />
-    <main id="main-content" class="py-6">
+    <main id="main-content" class="py-6 min-h-[calc(100dvh-10.20rem)]">
       <slot />
     </main>
     <Footer />
