--- a/client/src/pages/character/[slug].astro
+++ b/client/src/pages/character/[slug].astro
@@ -3,7 +3,7 @@ import Layout from "../../lib/layouts/Layout.astro"
 ---
 
 <Layout title="Character">
-  <div class="px-6 max-w-7xl mx-auto space-y-4">
+  <div class="*:px-6 *:max-w-7xl *:mx-auto space-y-4">
     <nav>breadcrumb</nav>
     <header class="flex gap-x-4 select-auto">
       <div class="size-44 bg-purple-200 rounded-md"></div>
@@ -21,10 +21,12 @@ import Layout from "../../lib/layouts/Layout.astro"
         </div>
       </div>
     </header>
-    <nav class="flex gap-x-3">
-      <button>Overview</button>
-      <button>Gallery</button>
-      <button>Others</button>
+  </div>
+  <div class="border-b border-b-neutral-300/40 mt-1">
+    <nav class="px-6 py-2 max-w-7xl mx-auto flex gap-x-3">
+      <button class="px-2 py-2">Overview</button>
+      <button class="px-2 py-2">Gallery</button>
+      <button class="px-2 py-2">Others</button>
     </nav>
   </div>
   <div class="px-6 max-w-7xl mx-auto mt-4">
