--- a/client/src/lib/components/ui/CharacterItem.astro
+++ b/client/src/lib/components/ui/CharacterItem.astro
@@ -1,8 +1,8 @@
 ---
-import type { ItemProps as Props } from "./ItemTypes";
-import { EllipsisVertIcon } from "./icons";
+import type { ItemProps as Props } from "./CharacterItem.types"
+import { EllipsisVertIcon } from "../icons"
 
-const { title } = Astro.props;
+const { title } = Astro.props
 ---
 
 <div
