add navbar browse UI
- made navbar truely sticky by adding a css var
- added PWA
- added disclaimer on footer
- added robots.txt

--- a/client/src/lib/components/base/BrowseMenu.astro
+++ b/client/src/lib/components/base/BrowseMenu.astro
@@ -1,3 +1,74 @@
-<div data-browse-menu-root="">
-  lmao
+---
+import { ChevronRightIcon, ArrowRightIcon, RandomIcon } from "../icons";
+const CATEGORIES = [
+  "By species",
+  "By franchise",
+  "By origin",
+  "By chronology",
+  "By medium",
+  "By target audience",
+];
+---
+
+<div
+  data-browse-menu-root=""
+  class="max-w-screen-xl mx-auto px-6 grid grid-cols-[auto_1fr] gap-4"
+>
+  <nav class="grid gap-y-0.5 w-64 h-fit">
+    {
+      CATEGORIES.map((a) => (
+        <button class="group inline-flex items-center-safe justify-between py-2 px-2.5 rounded-md hover:bg-neutral-500/10 dark:hover:bg-neutral-500/20 cursor-pointer">
+          <span>{a}</span>
+          <ChevronRightIcon
+            width="1.1em"
+            height="1.1em"
+            class="-translate-x-0.5 opacity-60 group-hover:translate-x-0 group-hover:opacity-100 transition-transform"
+          />
+        </button>
+      ))
+    }
+    <a
+      href="#"
+      class="group inline-flex items-center-safe justify-between py-2 px-2.5 rounded-md hover:bg-purple-500/10 dark:hover:bg-purple-500/20 text-purple-500"
+      ><span>View all categories</span>
+      <ArrowRightIcon
+        width="1.1em"
+        height="1.1em"
+        class="-translate-x-0.5 opacity-60 group-hover:translate-x-0 group-hover:opacity-100 transition-transform"
+      />
+    </a>
+    <hr class="my-1 mx-2 opacity-40" />
+    <button
+      class="group inline-flex items-center-safe gap-x-2 py-2 px-2.5 rounded-md hover:bg-pink-500/10 dark:hover:bg-pink-500/20 text-pink-500 cursor-pointer"
+    >
+      <RandomIcon width="1.25em" height="1.25em" />
+      <span>Random</span>
+    </button>
+  </nav>
+  <section class="grid grid-rows-[auto_1fr] gap-y-2" aria-label="Browse by species">
+    <h2 class="font-bold text-2xl leading-relaxed">Species</h2>
+    <div class="grid grid-cols-3 gap-2 h-full" role="listbox">
+      {
+        [...Array(12)].map(() => (
+          <div role="listitem" class="flex items-center gap-x-2" aria-labelledby="sub-heading-<random-hash>" aria-describedby="sub-subtitle-<random-hash>">
+            <a href="#">
+              <div class="bg-red-200 size-[calc(var(--spacing)*18)] rounded-md row-span-2" />
+            </a>
+            <div class="space-y-0.5">
+              <h3 class="text-xl font-bold h-fit" id="sub-heading-<random-hash>">
+                <a href="#">Title</a>
+              </h3>
+              <span class="opacity-75 cursor-default" id="sub-subtitle-<random-hash>">Subheading</span>
+            </div>
+          </div>
+        ))
+      }
+    </div>
+  </section>
+  <div class="col-span-2 pt-2 pb-4">
+    <p>
+      <span class="opacity-75">Can't find what you're looking for? Try </span>
+      <a href="#" class="hover:underline text-blue-400">Advanced search</a>
+    </p>
+  </div>
 </div>
