--- a/client/src/pages/index.astro
+++ b/client/src/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-import Item from "../lib/components/Item.astro"
+import { CharacterItem } from "../lib/components/ui"
 import Layout from "../lib/layouts/Layout.astro"
 import SectionTitle from "../lib/layouts/SectionTitle.astro"
 ---
@@ -11,11 +11,11 @@ import SectionTitle from "../lib/layouts/SectionTitle.astro"
 		<div class="grid grid-cols-1 lg:grid-cols-2 lg:gap-x-4">
 			<SectionTitle heading="Recently added">
 				<div class="space-y-3 *:-mx-2.5">
-					<Item title="Placeholder" />
-					<Item title="Placeholder" />
-					<Item title="Placeholder" />
-					<Item title="Placeholder" />
-					<Item title="Placeholder" />
+					<CharacterItem title="Placeholder" />
+					<CharacterItem title="Placeholder" />
+					<CharacterItem title="Placeholder" />
+					<CharacterItem title="Placeholder" />
+					<CharacterItem title="Placeholder" />
 				</div>
 			</SectionTitle>
 			<SectionTitle heading="Most popular this week">
@@ -32,11 +32,11 @@ import SectionTitle from "../lib/layouts/SectionTitle.astro"
 					 </span>
 				</div>
 				<div class="space-y-3 *:-mx-2.5">
-					<Item title="Placeholder" />
-					<Item title="Placeholder" />
-					<Item title="Placeholder" />
-					<Item title="Placeholder" />
-					<Item title="Placeholder" />
+					<CharacterItem title="Placeholder" />
+					<CharacterItem title="Placeholder" />
+					<CharacterItem title="Placeholder" />
+					<CharacterItem title="Placeholder" />
+					<CharacterItem title="Placeholder" />
 				</div>
 			</SectionTitle>
 		</div>
