hide the browser nav, wip interactivity
- added sample json for family tree ref

--- a/client/src/lib/components/base/Navbar.astro
+++ b/client/src/lib/components/base/Navbar.astro
@@ -73,6 +73,6 @@ import BrowseMenu from "./BrowseMenu.astro";
     </div>
   </div>
   <div id="flexible-container" class="relative">
-    <BrowseMenu/>
+    <!-- <BrowseMenu/> -->
   </div>
 </nav>
