added search field and list shelf
- added some more icons
- added some meta tags for iphone stuff
- minor ui changes: footer, navbar
- added import alias to improve DX

--- a/client/src/lib/components/base/Footer.astro
+++ b/client/src/lib/components/base/Footer.astro
@@ -18,8 +18,8 @@ const footerLinks = [
     <p id="copyright-disclaimer">
       All content hosted on this site is for informational purposes only. 
     </p>
-    <div class="flex gap-x-4 gap-y-5 flex-col lg:flex-row">
-      <span class="opacity-80 shrink-0 mr-3.5">© 2025 Fusky Labs</span>
+    <div class="flex gap-x-4 gap-y-5 flex-col md:flex-row">
+      <span class="opacity-80 shrink-0 mr-3.5 order-last md:order-none">© 2025 Fusky Labs</span>
       <div class="flex-1 hidden lg:block"></div>
       {
         footerLinks.map((e) => (
