--- a/client/src/pages/character/[slug].astro
+++ b/client/src/pages/character/[slug].astro
@@ -1,5 +1,5 @@
 ---
-import Layout from "../../lib/layouts/Layout.astro"
+import Layout from "$lib/layouts/Layout.astro"
 ---
 
 <Layout title="Character">
