--- a/client/src/pages/index.astro
+++ b/client/src/pages/index.astro
@@ -1,7 +1,7 @@
 ---
-import { CharacterItem } from "../lib/components/ui"
-import Layout from "../lib/layouts/Layout.astro"
-import SectionTitle from "../lib/layouts/SectionTitle.astro"
+import { CharacterItem } from "$lib/components/ui"
+import Layout from "$lib/layouts/Layout.astro"
+import SectionTitle from "$lib/layouts/SectionTitle.astro"
 ---
 
 <Layout title="Home" description="A home of anthro things">
