--- a/client/src/lib/components/base/Navbar.astro
+++ b/client/src/lib/components/base/Navbar.astro
@@ -36,30 +36,20 @@ import BrowseMenu from "./BrowseMenu.astro";
         id="search"
         aria-expanded="false"
         class="px-2.5 py-1.5 bg-blue-600/20 hover:bg-blue-600/60 rounded-md cursor-pointer inline-flex items-center gap-x-1"
-      >
+        aria-label="Search or press control or command + slash for quick access"
+        >
         <SearchIcon class="opacity-65" />
         <span>Search</span>
+        <div>
+          <span class="sr-only">Ctrl/Command + /</span>
+          <kbd class="select-none text-xs border py-0.5 px-1 rounded-sm">Ctrl</kbd>
+          <kbd class="select-none text-xs border py-0.5 px-1 rounded-sm">/</kbd>
+        </div>
       </button>
     </div>
 
     <div class="flex-1"></div>
 
-    <!-- <div class="relative flex-1">
-      <span
-        class="absolute left-2.5 inset-y-0 opacity-50 pointer-events-none flex items-center"
-      >
-        <SearchIcon width="1.2em" height="1.2em" />
-      </span>
-      <input
-        id="global-search"
-        class="pl-8 py-1 max-w-60 w-full dark:bg-neutral-900/40 dark:border-neutral-600/60 rounded-md placeholder:text-sm"
-        role="searchbox"
-        type="text"
-        placeholder="Search"
-        autocomplete="off"
-        spellcheck="false"
-      />
-    </div> -->
     <div class="flex gap-x-1">
       <a href="/requests" class="px-3 py-1.5 border rounded-md cursor-pointer"
         >Request</a
